--- a/README.adoc
+++ b/README.adoc
@@ -95,5 +95,37 @@ A successful build would show output looking something like this:
 [INFO] --- maven-surefire-plugin:2.18.1:test (default-test) @ example-project ---
 ----
 
+==== get_revision_from_pom
+Gets the `<revision>` property from a `pom.xml` in the current directory.
+For example, given the following `pom.xml`:
+
+[source,xml]
+----
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.example</groupId>
+	<artifactId>example-project</artifactId>
+	<version>${revision}</version>
+	<properties>
+		<revision>1.0.0-SNAPSHOT</revision>
+		<java.version>1.8</java.version>
+	</properties>
+</project>
+----
+
+The following call would set `version` to `1.0.0-SNAPSHOT`:
+
+[source,bash]
+----
+version=$( get_revision_from_pom )
+----
+
+NOTE: This command relies on `xmllint` being installed
+
+TIP: For details of how you can use `<revision>` in your builds see https://maven.apache.org/maven-ci-friendly.html[Maven CI Friendly Versions]
+
+
 === Contributing
 See link:CONTRIBUTING.adoc[CONTRIBUTING.adoc] for details of how to contribute.
