Fix Concourse URL in README
Closes gh-1
Closes gh-6

--- a/README.adoc
+++ b/README.adoc
@@ -1,8 +1,8 @@
 == Concourse Java Scripts
-Useful bash scripts that help when building Java projects in http://concouse.ci[Concourse].
+Useful bash scripts that help when building Java projects in https://concourse-ci.org/[Concourse].
 
 === Importing
-Copy `concouse-java.sh` to your project or add it to the docker image you use for building.
+Copy `concourse-java.sh` to your project or add it to the docker image you use for building.
 Add the following to your build script:
 
 [source,bash]
